WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181369
Fix check-webkit-style issues with WebNSDataExtras.mm
https://bugs.webkit.org/show_bug.cgi?id=181369
Summary
Fix check-webkit-style issues with WebNSDataExtras.mm
David Kilzer (:ddkilzer)
Reported
2018-01-06 20:26:29 PST
After converting Source/WebKitLegacy/mac/Misc/WebNSDataExtras.m to Objective-C++ for
Bug 181256
, the check-webkit-style script finds a number of issues with its coding style. This bug tracks fixing all the known style issues found with check-webkit-style.
Attachments
Patch v1
(18.35 KB, patch)
2018-01-08 02:20 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2018-01-08 02:20:54 PST
Created
attachment 330672
[details]
Patch v1
WebKit Commit Bot
Comment 2
2018-01-08 13:02:09 PST
Comment on
attachment 330672
[details]
Patch v1 Clearing flags on attachment: 330672 Committed
r226529
: <
https://trac.webkit.org/changeset/226529
>
WebKit Commit Bot
Comment 3
2018-01-08 13:02:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-01-08 13:03:29 PST
<
rdar://problem/36357331
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug