Fix check-webkit-style issues with WebNSDataExtras.mm <https://webkit.org/b/181369>

Reviewed by Alex Christensen.

* Misc/WebNSDataExtras.mm:
(-[NSString _web_capitalizeRFC822HeaderFieldName]):
(-[NSData _webkit_guessedMIMETypeForXML]):
(-[NSData _webkit_guessedMIMEType]):
(-[NSData _web_isCaseInsensitiveEqualToCString:]):
(_findEOL):
(-[NSData _webkit_parseRFC822HeaderFields]):
(-[NSData _web_locationAfterFirstBlankLine]):
- Fix all the check-webkit-style warnings.


Canonical link: https://commits.webkit.org/197238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226529 268f45cc-cd09-0410-ab3c-d52691b4dbfc